--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,600,700|Titillium+Web:400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:300,500,700|Open+Sans:400,600,700|Titillium+Web:400,600,700" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/f7f9e333d1.js" crossorigin="anonymous"></script>
   <title>GummyCode</title>
 </head>
 
